Tour Beta complete...

--- a/src/templates/base_sidebar.html
+++ b/src/templates/base_sidebar.html
@@ -23,7 +23,8 @@
 {% block js %}{% endblock %}
 
 {% block tour_js %}
-    {% if not request.user.intro_tour_completed %}
+
+    {% if request.user.profile.intro_tour_completed = False %}
       {% include 'intro_tour.html' %}
     {% endif %}
 {% endblock %}
