--- a/src/templates/intro_tour.html
+++ b/src/templates/intro_tour.html
@@ -142,7 +142,7 @@ $(document).ready(function() {
         // backdrop: true,
         element: "#quests-menu",
         title: "<i class='fa fa-shield'></i>&nbsp;&nbsp;Quests",
-        content: "<p>You will probabyl spend most of you time on the Quests page.</p> \
+        content: "<p>You will probably spend most of you time on the Quests page.</p> \
         <p><b>Click the Quests button</b> now so I can give you more details.</p> \
         ",
         reflex: true,
