--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -2,7 +2,7 @@
 
   {% if tab.submissions %}
   <div class="row panel-heading">
-    <div class="col-xs-1"></div>
+    <div class="col-xs-1 col-icon"></div>
     <div class="col-xs-4">Quest</div>
     <div class="col-xs-1">XP   </div>
     <div class="col-xs-1">q.id</div>
@@ -23,8 +23,8 @@
 
         <div class="row">
           <h4 class="panel-title">
-            <div class="col-xs-1">
-              <img class="media-object panel-title-img" src="{{ s.quest.get_icon_url }}" alt="icon"/>
+            <div class="col-xs-1 col-icon">
+              <img class="img-responsive panel-title-img" src="{{ s.quest.get_icon_url }}" alt="icon"/>
             </div>
             <div class="col-xs-4">{{s.quest.name}}</div>
             <div class="col-xs-1">{{s.quest.xp}}  </div>
