--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -41,24 +41,24 @@
   <div class="nav list-group hidden-xs" id="lg-menu-staff">
       <a class="list-group-item {% if '/approvals/' in request.path_info %}active{% endif %}"
         href="{% url 'quests:approvals' %}">
-        <i class="fa fa-shield fa-fw"></i>&nbsp; Quest Approval
+        <i class="fa fa-shield fa-fw"></i>&nbsp;
+        <span class="visible-sm-inline visible-xs-inline visible-md-inline">Approvals</span>
+        <span class="hidden-sm hidden-xs hidden-md">Quest Approvals</span>
       </a>
   </div>
   {% endif %}
 
-    <!-- <ul class="list-unstyled hidden-xs" id="sidebar-footer">
-        <li>
-          <a href="http://www.bootply.com"><h3>Bootstrap</h3> <i class="glyphicon glyphicon-heart-empty"></i> Bootply</a>
-        </li>
-    </ul> -->
-
-    <!-- tiny only nav-->
+  <!-- tiny only nav-->
   <ul class="nav visible-xs" id="xs-menu">
-        <li><a href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i></a></li>
-        <li><a href="#" class="text-center"><i class="fa fa-trophy fa-fw"></i></a></li>
-        <li><a href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i></a></li>
-        <li><a href="#" class="text-center"><i class="fa fa-newspaper-o fa-fw"></i></a></li>
-    </ul>
+    <li><a href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i></a></li>
+    <li><a href="#" class="text-center"><i class="fa fa-trophy fa-fw"></i></a></li>
+    <li><a href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i></a></li>
+    <li><a href="#" class="text-center"><i class="fa fa-newspaper-o fa-fw"></i></a></li>
+  </ul>
+
+  <ul class="nav visible-xs" id="xs-menu-staff">
+    <li><a href="{% url 'quests:approvals' %}"><i class="fa fa-shield fa-fw"></i></a></li>
+  </ul>
 </div>
 
 <!-- /sidebar -->
