--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -4,8 +4,10 @@
 
 .navbar-text-large {
   font-size: 24px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+}
+
+.navbar-text-large-container {
+  margin-bottom: -3px;
 }
 
 .jumbotron {
