--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -67,7 +67,9 @@
       <ul class="nav navbar-nav navbar-right">
         {% if request.user.is_authenticated %}
         <li id="menu-xp">
-          <a class="navbar-text-large">XP: {{ request.user.profile.xp }}</a>
+          <a class="navbar-text-large-container">XP:
+            <span class="navbar-text-large"> {{ request.user.profile.xp }}</span>
+          </a>
         </li>
         <li id="profile">
           <a href="{% url 'profiles:profile_detail' request.user.id %}">
