Change Achievments to Badges, swap icon

--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -15,7 +15,7 @@
 
   <div class="panel-heading">
     <h3 class="panel-title">
-      <i class="pull-right fa {{badges.badge_type.fa_icon}}"></i>
+      <i class="pull-right fa {{badge_type.fa_icon}}"></i>
       {{badge_type.name}}s
     </h3>
   </div>
