--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -160,8 +160,8 @@
   <div class="col-sm-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <i class="pull-right fa fa-fw fa-trophy"></i>
-        <h3 class="panel-title">Achievments
+        <i class="pull-right fa fa-fw fa-certificate"></i>
+        <h3 class="panel-title">Badges
           {% if request.user.is_staff %}
             &nbsp;&nbsp;<a class="btn btn-xs btn-warning"
             href="{% url 'badges:grant' object.user.id %}" role="button">Grant</a>
