--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -32,7 +32,7 @@
           <ul class="dropdown-menu">
             <li class="dropdown-header">Content</li>
             <li><a href="/admin/quest_manager/quest/add/">Build Quests</a></li>
-            <li><a href="#">Build Achievements</a></li>
+            <li><a href="#">Build Badges</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Users</li>
             <li><a href="#">Remove User</a></li>
