new assertion notification via post_save signal

--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -25,7 +25,7 @@
 
     <script src="{% static 'js/bootstrap-tour.min.js' %}"></script>
 
-    <script src="{% static 'js/jquery-double-submission' %}"></script>
+    <script src="{% static 'js/jquery-double-submission.js' %}"></script>
 
     <script>
 
