--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -74,6 +74,9 @@
                   <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
                 {% endif %}
                   <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
+                  <a class="btn btn-warning" target="_blank"
+                    href="{% url 'badges:grant' 0 s.user.id %}" role="button">Grant Badge</a>
+
               </div>
             </form>
           </li>
