--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -27,6 +27,7 @@
 
     <script src="{% static 'js/jquery-double-submission.js' %}"></script>
 
+
     <script>
 
     $(document).ready(function() {
@@ -39,6 +40,10 @@
       //     // }
       //   }
       // });
+
+      // Ensure external links open in new tabs by adding target="_blank"
+      $("a[href^='http://']").attr("target","_blank");
+      $("a[href^='https://']").attr("target","_blank");
 
       // Dismiss bootstrap alerts
       if ($('.dismiss-in-3').length) {
