add to models for GameLab transfers

--- a/src/templates/intro_tour.html
+++ b/src/templates/intro_tour.html
@@ -173,7 +173,7 @@ $(document).ready(function() {
         placement: 'bottom',
         element: "#preview-btns-1",
         title: "<i class='fa fa-shield'></i>&nbsp;&nbsp;Quest  Preview Buttons",
-        content: "<p><b>View Details:</b> This will allow you to see the full contents of a quest.  Chose this if you are curious, but might not want to actually do the quest.</p> \
+        content: "<p><b>View Details:</b> This will allow you to see the full contents of a quest.  Choose this if you are curious, but might not want to actually do the quest.</p> \
         <p><b>Start Quest:</b> This will also bring you to the full details of the quest, however it will also move the quest to your <em>In Progress</em> tab.</p>\
         <img class='pop-over-img' src='http://img4.wikia.nocookie.net/__cb20120507011516/lotr/images/0/09/Fotr0946.jpg' /> \
         <p>The footing is tricky here so follow the directions carefully. I don't want you to fall off a cliff!</p> \
