--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -118,9 +118,15 @@
            {% for s in completed_submissions %}
              <a href="{{s.get_absolute_url}}" class="list-group-item list-group-item-packed
                  {% if s.is_awaiting_approval %}list-group-item-warning
+                 {% elif s.game_lab_transfer %}list-group-item-muted
                  {% endif %}">
                <img class="icon-xs" src="{{ s.quest.get_icon_url }}" alt=""/>
-               {{s.quest}} <small>({{s.quest.xp}} XP)</small>
+               {{s.quest}} <small>
+                {% if s.game_lab_transfer %}
+                  (GameLab Transfer)
+                {% else %}
+                  ({{s.quest.xp}} XP)
+                {% endif %}</small>
              </a>
            {% endfor %}
          {% else %}
